testsuite/tests/semantic_errors/non_tagged_record_extension/test.out
Analyzing test.adb
##################

Resolving xrefs for node <AssignStmt test.adb:8:4-8:25>
*******************************************************

Name resolution failed as expected with:

test.adb:8:10: error: expected tagged type, got T
8 |    X := (Y with V => 1);
  |          ^



Done.
